@@ -1,9 +1,51 @@
 <html>
-<body bgcolor="#0000cc">
-Test<br>
-Test<br>
-Test<br>
-Test<br>
-Test<br>
-Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>Test<br>
+<h1>A lot of pictures</h1>
+<p>
+<img src="test.jpg">
+</p>
+<p>
+<img src="test.jpg">
+</p>
+<p>
+<img src="test.jpg">
+</p>
+<p>
+<img src="test.jpg">
+</p>
+<p>
+<img src="test.jpg">
+</p>
+<p>
+<img src="test.jpg">
+</p>
+<p>
+<img src="test.jpg">
+</p>
+<p>
+<img src="test.jpg">
+</p>
+<p>
+<img src="test.jpg">
+</p>
+<p>
+<img src="test.jpg">
+</p>
+<p>
+<img src="test.jpg">
+</p>
+<p>
+<img src="test.jpg">
+</p>
+<p>
+<img src="test.jpg">
+</p>
+<p>
+<img src="test.jpg">
+</p>
+<p>
+<img src="test.jpg">
+</p>
+<p>
+<img src="test.jpg">
+</p>
 </html>
