@@ -1,3 +1,11 @@
+1999-11-26  Anders Carlsson  <andersca@gnu.org>
+
+	* htmlbullet.c (draw): Fixed the bullet redraw bug.
+
+1999-11-26  Anders Carlsson  <andersca@gnu.org>
+
+	* htmlimage.c (draw): Fixed the image redraw bug.
+
 1999-11-25  Ettore Perazzoli  <ettore@gnu.org>
 
 	* htmlengine.c: Added `ID_I' to enum `ID'.
